# PhotometricStereo

./: Build.txt  CMakeLists.txt
include/: generate_data.hpp  photometric_stereo.hpp
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  generate_data.cpp  photometric_stereo.cpp
test/: CMakeLists.txt  generate_data.cpp  photometric_stereo.cpp
